--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/tab_off_ic_home.png
+    - images/tab_off_ic_calendar.png
+    - images/tab_off_ic_diary.png
+    - images/tab_off_ic_chat.png
+    - images/tab_on_ic_home.png
+    - images/tab_on_ic_calendar.png
+    - images/tab_on_ic_diary.png
+    - images/tab_on_ic_chat.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
