--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +69,21 @@ flutter:
     - images/tab_on_ic_calendar.png
     - images/tab_on_ic_diary.png
     - images/tab_on_ic_chat.png
-
+    - images/arr_left.png
+    - images/btn_add_note.png
+    - images/btn_cal_left.png
+    - images/btn_cal_right.png
+    - images/btn_expand.png
+    - images/emo_circle.png
+    - images/ic_cancel.png
+    - images/ic_emotion_anger.png
+    - images/ic_emotion_calmness.png
+    - images/ic_emotion_dullness.png
+    - images/ic_emotion_emptiness.png
+    - images/ic_emotion_sadness.png
+    - images/ic_emotion_satisfied.png
+    - images/ic_ihuae_main.png
+    - images/toolbar_btn_back.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -87,10 +102,38 @@ flutter:
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  #  fonts:
+  #    - asset: fonts/TrajanPro.ttf
+  #    - asset: fonts/TrajanPro_Bold.ttf
+  #      weight: 700
   #
+  fonts:
+    - family: SpoqaHanSansNeo
+      fonts:
+        - asset: font/SpoqaHanSansNeo-Thin.ttf
+          # weight: 100
+        - asset: font/SpoqaHanSansNeo-Light.ttf
+          # weight: 300
+        - asset: font/SpoqaHanSansNeo-Regular.ttf
+          # weight: 400
+        - asset: font/SpoqaHanSansNeo-Medium.ttf
+          # weight: 500
+        - asset: font/SpoqaHanSansNeo-Bold.ttf
+          # weight: 700
+
+      # - asset: fonts/spoqa_han_sans_neo_thin.ttf
+      #   weight : 100
+      # - asset: fonts/spoqa_han_sans_neo_light.ttf
+      #   weight : 300
+      # - asset: fonts/spoqa_han_sans_neo_regular.ttf
+      #   weight : 400
+      # - asset: fonts/spoqa_han_sans_neo_medium.ttf
+      #   weight : 500
+      # - asset: fonts/spoqa_han_sans_neo_bold.ttf
+      #   weight : 700
+          
+          
+          
+          
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
