--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,44 +125,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #  fonts:
-  #    - asset: fonts/TrajanPro.ttf
-  #    - asset: fonts/TrajanPro_Bold.ttf
-  #      weight: 700
-  #
   fonts:
     - family: SpoqaHanSansNeo
       fonts:
         - asset: font/SpoqaHanSansNeo-Thin.ttf
-          # weight: 100
+          weight: 100
         - asset: font/SpoqaHanSansNeo-Light.ttf
-          # weight: 300
+          weight: 300
         - asset: font/SpoqaHanSansNeo-Regular.ttf
-          # weight: 400
+          weight: 400
         - asset: font/SpoqaHanSansNeo-Medium.ttf
-          # weight: 500
+          weight: 500
         - asset: font/SpoqaHanSansNeo-Bold.ttf
-          # weight: 700
-
-      # - asset: fonts/spoqa_han_sans_neo_thin.ttf
-      #   weight : 100
-      # - asset: fonts/spoqa_han_sans_neo_light.ttf
-      #   weight : 300
-      # - asset: fonts/spoqa_han_sans_neo_regular.ttf
-      #   weight : 400
-      # - asset: fonts/spoqa_han_sans_neo_medium.ttf
-      #   weight : 500
-      # - asset: fonts/spoqa_han_sans_neo_bold.ttf
-      #   weight : 700
-          
-          
+          weight: 700
           
           
   # For details regarding fonts from package dependencies,
