--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.2.4
   shared_preferences: ^2.2.2
   week_of_year: ^2.2.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
